# SimplePhysicsEngine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  deps.md  old.txt
demo/FEMsimulation/: CMakeLists.txt  dtkFemSimulation.cpp  dtkFemSimulation.h  dtkMesh.cpp  dtkMesh.h  dtkObject.h  main.cpp
demo2d/: CMakeLists.txt
demo2d/include/: dtkMesh.h
demo2d/src/: dtkObject.cpp
demo3d/: CMakeLists.txt  main.cpp
demo_old/RigidBodySimulation/: CMakeLists.txt  README.md  cbody.cpp  cbody.h  cpair.cpp
engine/: CMakeLists.txt
engine/dtk/: dtk.h  dtkGraphicsKernel.h  dtkPhysMassPoint.cpp  dtkPhysMassPoint.h  dtkPhysParticle.h  dtkPoints.h  dtkStaticTetraMesh.cpp
engine/math/: dtkMatrix.h  dtkMatrixOP.h  dtkTx.h  dtkTxIO.h  dtkTxOP.h
engine/physics/: dtkJoint.cpp  dtkJoint.h  dtkRigidBody.cpp  dtkRigidBody.h
sim3D/: CMakeLists.txt  dtkFemSimulation.cpp  dtkFemSimulation.h  dtkScene.h  main.cpp
simulation/: CMakeLists.txt
simulation/include/: Particle.h  SPHSolver.h  cjoint.h  cpair.h  ctypes.h  cworld.h  dtkCollisionPair.h  dtkFemSimulation.h  dtkMesh.h
simulation/src/: Constants.cpp  Grid.cpp  Main.cpp  SPHSolver.cpp  cjoint.cpp  cpair.cpp  dtkCollisionPair.cpp  dtkFemSimulation.cpp  dtkMesh.cpp  dtkScene.cpp
src/: CMakeLists.txt  dtkAssert.cpp  dtkErrorManager.cpp  dtkGraphicsKernel.cpp  dtkIntersectTest.cpp  dtkMatrixOP.h  dtkMatrixOp.cpp  dtkPhysCore.cpp  dtkPhysKnotPlanner.cpp  dtkPhysMassPoint.cpp  dtkPhysMassSpringThread.cpp  dtkPhysMassSpringThreadCollisionResponse.cpp  dtkPhysParticle.cpp  dtkPhysTetraMassSpring.cpp  dtkPointsReader.cpp  dtkRigidBody.cpp  dtkRigidBody.h  dtkStaticMeshEliminator.cpp  dtkStaticTriangleMeshWriter.cpp  dtkTx.h
src/collision_detect/: dtkCollisionDetectHierarchy.cpp  dtkCollisionDetectNodeKDOPS.cpp  dtkCollisionDetectStage.cpp
src/collision_detect/include/: dtkCollisionDetectHierarchy.h  dtkCollisionDetectNodeKDOPS.h
src/demo2d/: CMakeLists.txt
src/demo2d/include/: SPHSolver.h  dtkCollisionPair.h  dtkFemSimulation.h
src/demo2d/src/: Main.cpp  Particle.cpp
src/demo3d/: CMakeLists.txt
src/demo_old/FEMsimulation/: dtkFemSimulation.cpp  dtkFemSimulation.h  main.cpp
src/demo_old/RigidBodySimulation/: main.cpp
src/demo_old/SPHSimulation/: README.md
src/demo_old/guideWireSimulation/: .editorconfig  collisionResponse.h  controlCore.h  glDrawer.h  guideWireInternalResponse.h  resource.h  simulationParameters.ui
src/demo_old/guideWireSimulation/bak/: guideWireSimulation.h
src/demo_old/guideWireSimulation/data/: gallbladder01.s4m  gwdata.txt  vein final version.s4m  vein final version1.s4m  vein0806version7.s3m
src/dtk/: dtk.cpp  dtkAssert.cpp  dtkCollisionDetectBasic.cpp  dtkCollisionDetectHierarchy.cpp  dtkCollisionDetectHierarchyKDOPS.cpp  dtkCollisionDetectNode.cpp  dtkCollisionDetectNodeKDOPS.cpp  dtkCollisionDetectPrimitive.cpp  dtkCollisionDetectStage.cpp  dtkCollisionDetectStage.cpp.bak  dtkErrorManager.cpp  dtkGraphicsKernel.cpp  dtkIntersectTest.cpp  dtkPhysCore.cpp  dtkPhysCore.cpp.bak  dtkPhysKnotPlanner.cpp  dtkPhysMassPoint.cpp  dtkPhysMassSpring.cpp  dtkPhysMassSpringCollisionResponse.cpp  dtkPhysMassSpringThread.cpp  dtkPhysMassSpringThreadCollisionResponse.cpp  dtkPhysParticle.cpp  dtkPhysParticleSystem.cpp  dtkPhysSpring.cpp  dtkPhysTetraMassSpring.cpp  dtkPoints.h  dtkPointsReader.cpp  dtkPointsWriter.cpp  dtkScene.cpp  dtkSign.cpp  dtkStaticMeshEliminator.cpp  dtkStaticTetraMesh.cpp  dtkStaticTetraMeshReader.cpp  dtkStaticTetraMeshWriter.cpp  dtkStaticTriangleMesh.cpp  dtkStaticTriangleMeshReader.cpp  dtkStaticTriangleMeshWriter.cpp
src/dtk/collision_detect/include/: dtkCollisionDetectStage.h
src/dtk/include/: dtk.h  dtkArray.h  dtkAssert.h  dtkCollisionDetectBasic.h  dtkCollisionDetectHierarchy.h  dtkCollisionDetectHierarchyKDOPS.h  dtkCollisionDetectNode.h  dtkCollisionDetectNodeKDOPS.h  dtkCollisionDetectPrimitive.h  dtkCollisionDetectStage.h  dtkConfig.h  dtkError.h  dtkErrorManager.h  dtkExports.h  dtkGraphics.h  dtkGraphicsKernel.h  dtkGraphicsKernel.h.bak  dtkGraphicsTools.h  dtkIDTypes.h  dtkIO.h  dtkImports.h  dtkInit.h  dtkIntersectTest.h  dtkMatrixAlgorithm.h  dtkPhysCore.h  dtkPhysKnotPlanner.h  dtkPhysMassPoint.h  dtkPhysMassSpring.h  dtkPhysMassSpring.h.bak  dtkPhysMassSpringCollisionResponse.h  dtkPhysMassSpringThread.h  dtkPhysMassSpringThreadCollisionResponse.h  dtkPhysParticle.h  dtkPhysParticleSystem.h  dtkPhysSpring.h  dtkPhysTetraMassSpring.h  dtkPoints.h  dtkPointsReader.h  dtkPointsVector.h  dtkPointsWriter.h  (+13 more)
src/engine/: CMakeLists.txt
src/engine/dtk/: dtkPhysMassPoint.cpp  dtkPhysParticle.h  dtkScene.cpp  dtkScene.h
src/engine/math/: dtkMatrixOP.h  dtkTx.h
src/include/: dtk.h  dtkArray_will_del.h  dtkAssert.h  dtkConfig.h  dtkError.h  dtkGraphics.h  dtkIO.h  dtkPhysCore.h  dtkPhysMassPoint.h  dtkPhysMassSpringThread.h  dtkPhysMassSpringThreadCollisionResponse.h  dtkPhysSpring.h  dtkPhysTetraMassSpring.h  dtkPoints.h  dtkPointsReader.h  dtkPointsVector.h  dtkRandom.h  dtkSign.h  dtkStaticTetraMesh.h  dtkStaticTetraMeshReader.h  dtkStaticTetraMeshWriter.h  dtkStaticTriangleMesh.h  dtkStaticTriangleMeshWriter.h
src/math/: dtkMatrixOp.cpp
src/math/include/: dtkMatrix.h  dtkMatrixOP.h  dtkTx.h  dtkTxIO.h  dtkTxOP.h
src/physics/: dtkJoint.cpp  dtkRigidBody.cpp
src/physics/include/: dtkJoint.h  dtkRigidBody.h
src/viewer_will_del/opengl/: camera.h  dtkGUIOpenGLbyFreeGLUT.h  dtkGUIOpenGLbyGLAD.h  shader.cpp  shader.h
test/: CMakeLists.txt
test/system_test/: CMakeLists.txt
test/system_test/demo2d/: CMakeLists.txt  CollisionPair.cpp  Constants.cpp  FemSimulation.cpp  Grid.cpp  Main.cpp  Mesh.cpp  Particle.cpp  SPHSolver.cpp  dtkCollisionPair.cpp  dtkFemSimulation.cpp  dtkMesh.cpp  dtkObject.cpp  dtkScene.cpp  grid.cpp
test/system_test/demo2d/include/: CollisionPair.h  Constants.h  Grid.h  (+12 more)
test/system_test/demo3d/: CMakeLists.txt  FemSimulation.cpp  FemSimulation.h  README.md  Scene.cpp  Scene.h  dtkFemSimulation.cpp  dtkFemSimulation.h  dtkScene.cpp  dtkScene.h  main.cpp
test/unit_test/: CMakeLists.txt  example.cpp
(+450 files in other folders)
