
# This file is a part of Simple-XX/SimplePhysicsEngine
# (https://github.com/Simple-XX/SimplePhysicsEngine).
#
# CMakeLists.txt for Simple-XX/SimplePhysicsEngine.

# 设置项目名与版本
project(
        system-test
        VERSION 0.0.1
)

add_subdirectory(demo2d)
# add_subdirectory(demo3d)
# add_subdirectory(demo_old)
